# poc-file-vault

./: Cargo.toml  Dockerfile
src/: main.rs
src/controllers/: image_controller.rs  mod.rs  status_controller.rs
src/controllers/dto/: mod.rs  upload_input.rs
src/domain/: image_extension.rs  image_info.rs  mod.rs  preset.rs  transformation.rs  transformation_crop.rs
src/utils/: image_transformer.rs  mod.rs  multipart.rs  s3.rs  upload.rs
