[package]
name = "file-vault-server"
version = "0.1.0"
authors = ["shalimov <shalimich@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
rayon = "1.5.0"
image = "0.23.12"
actix-multipart = "0.3"
futures = "0.3.1"
rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
sanitize-filename = "0.2"
rand = "0.7.3"